Add model, mongoose and connect to db

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.1.0"
+    "express-handlebars": "^5.1.0",
+    "mongoose": "^6.0.13"
   },
   "devDependencies": {
     "husky": "^7.0.4",
