--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "husky": "^7.0.4",
