--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "method-override": "^3.0.0",
     "mongoose": "^6.0.13",
     "mongoose-slug-generator": "^1.0.4"
   },
