--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-handlebars": "^5.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.13",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
